// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar correctly filters and sorts results 1`] = `
Array [
  "Canvas • HyperSec Kibana",
  "Discover • HyperSec Kibana",
  "Graph • HyperSec Kibana",
]
`;

exports[`SearchBar correctly filters and sorts results 2`] = `
Array [
  "Discover • HyperSec Kibana",
  "My Dashboard • Test",
]
`;

exports[`SearchBar only display results from the last search 1`] = `
Array [
  "Visualize • HyperSec Kibana",
  "Map • HyperSec Kibana",
]
`;

exports[`SearchBar only display results from the last search 2`] = `
Array [
  "Visualize • HyperSec Kibana",
  "Map • HyperSec Kibana",
]
`;

exports[`SearchBar supports keyboard shortcuts 1`] = `
<input
  aria-activedescendant=""
  aria-haspopup="listbox"
  aria-label="Search HyperSec"
  autocomplete="off"
  class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed euiSelectableSearch euiSelectableTemplateSitewide__search kbnSearchBar"
  data-test-subj="nav-search-input"
  placeholder="Search HyperSec"
  type="search"
  value=""
/>
`;
